GNOME Bugzilla – Bug 685106
[PATCH] Fix spelling errors in eog
Last modified: 2012-10-04 09:49:09 UTC
Created attachment 225393 [details] [review] Fix spelling errors in eog Fix some spelling errors in eog.
Okay, thanks! :) commit 83f4ea5542b365d624d6b263cec8a381d4aa26d9 Author: Martin Olsson <> Date: Sat Sep 29 20:28:57 2012 +0200 Fix spelling errors in eog https://bugzilla.gnome.org/show_bug.cgi?id=685106 --- This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.