Fix spelling errors in eog

https://bugzilla.gnome.org/show_bug.cgi?id=685106